ChatApp 1. Menu Settings 2. Status Changes 3. Dashboard

--- a/MyChatApp/app/src/main/res/values/strings.xml
+++ b/MyChatApp/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="loginButton">Already Have Account</string>
     <string name="createAccountButton">Need A New Account</string>
     <string name="enter_email_editor">Enter Email</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Logout">Logout</string>
+    <string name="settings">Settings</string>
+    <string name="change_profile">Change Profile</string>
+    <string name="change_status">Change Status</string>
 </resources>
